Started on announcements

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,5 +7,6 @@
     --color-black: #212121;
     --color-gray-dark: #757575;
     --color-gray-light: #BDBDBD;
+    --color-gray-lightest: #DFDFDF;
     --color-white: #FFFFFF;
   }
