--- a/src/global.css
+++ b/src/global.css
@@ -29,5 +29,5 @@
 
 /* ----- BUTTON ----- */
 .btn {
-  @apply font-bold py-2 px-4 rounded;
+  @apply font-bold text-white py-2 px-4 rounded bg-primary;
 }
